--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "dependencies": {
     "async": "0.9.x",
     "anyfetch-file-hydrater": ">=0.2.18",
-    "newrelic": "1.x.x"
+    "newrelic": "1.x.x",
+    "exiv2": "0.2.0"
   },
   "devDependencies": {
     "mocha": "1.17.x",
