--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "async": "0.9.x",
     "anyfetch-file-hydrater": ">=0.2.18",
     "newrelic": "1.x.x",
-    "exiv2": "0.2.0"
+    "exiv2": "0.4.x"
   },
   "devDependencies": {
     "mocha": "1.17.x",
