--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: node_js
 node_js:
 - '0.10'
-script:
-- npm test
 
 install:
 - sudo apt-get install libexiv2-11 libexiv2-dev
+- npm install
+
+script:
+- npm test
