--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   ],
   "dependencies": {
     "async": "0.9.x",
-    "anyfetch-file-hydrater": ">=0.2.18",
+    "anyfetch-hydrater": "^0.2.30",
     "newrelic": "1.x.x",
     "exiv2": "0.4.x"
   },
