--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "main": "./lib/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/AnyFetch/iptc.hydrater.anyfetch.com"
+    "url": "https://github.com/AnyFetch/iptc-hydrater.anyfetch.com"
   },
   "keywords": [
     "anyfetch",
