--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   ],
   "dependencies": {
     "async": "0.9.x",
-    "anyfetch-hydrater": "^1.0.12",
+    "anyfetch-hydrater": "1.0.13",
     "exiv2": "0.4.x"
   },
   "devDependencies": {
